FreeImage/Wrapper/Delphi/FreeImage.pas


// Load/Save flag constants -----------------------------------------------------
const
  BMP_DEFAULT =        0;
  BMP_SAVE_RLE =       1;
  CUT_DEFAULT =        0;
  ICO_DEFAULT =        0;
  ICO_FIRST =          0;
  ICO_SECOND =         0;
  ICO_THIRD =          0;
  IFF_DEFAULT =        0;
  JPEG_DEFAULT =       0;
  JPEG_FAST =          1;
  JPEG_ACCURATE =      2;
  JPEG_QUALITYSUPERB = $80;
  JPEG_QUALITYGOOD =   $100;
  JPEG_QUALITYNORMAL = $200;
  JPEG_QUALITYAVERAGE =$400;
  JPEG_QUALITYBAD =    $800;
  KOALA_DEFAULT =      0;
  LBM_DEFAULT =        0;
  MNG_DEFAULT =        0;
  PCD_DEFAULT =        0;
  PCD_BASE =           1;
  PCD_BASEDIV4 =       2;
  PCD_BASEDIV16 =      3;
  PCX_DEFAULT =        0;
  PNG_DEFAULT =        0;
  PNG_IGNOREGAMMA =	   1;       // avoid gamma correction
  PNM_DEFAULT =        0;
  PNM_SAVE_RAW =       0;       // If set the writer saves in RAW format (i.e. P4, P5 or P6)
  PNM_SAVE_ASCII =     1;       // If set the writer saves in ASCII format (i.e. P1, P2 or P3)
  PSD_DEFAULT =        0;
  RAS_DEFAULT =        0;
  TARGA_DEFAULT =      0;
  TARGA_LOAD_RGB888 =  1;      // If set the loader converts RGB555 and ARGB8888 -> RGB888.
  TIFF_DEFAULT =       0;
  TIFF_CMYK	=          $0001;  // reads/stores tags for separated CMYK (use | to combine with compression flags)
  TIFF_PACKBITS =      $0100;  // save using PACKBITS compression
  TIFF_DEFLATE =       $0200;  // save using DEFLATE compression
  TIFF_ADOBE_DEFLATE = $0400;  // save using ADOBE DEFLATE compression
  TIFF_NONE =          $0800;  // save without any compression
  WBMP_DEFAULT =       0;
  XBM_DEFAULT =		   0;
  XPM_DEFAULT =        0;

  
// Init/Error routines ------------------------------------------------------

procedure FreeImage_Initialise(load_local_plugins_only : boolean = False); stdcall; external FIDLL name '_FreeImage_Initialise@4';
procedure FreeImage_DeInitialise; stdcall; external FIDLL name '_FreeImage_DeInitialise@0';

// Version routines ---------------------------------------------------------

function FreeImage_GetVersion : PChar; stdcall; external FIDLL name '_FreeImage_GetVersion@0';
function FreeImage_GetCopyrightMessage : PChar; stdcall; external FIDLL name '_FreeImage_GetCopyrightMessage@0';

// Message output functions -------------------------------------------------

procedure FreeImage_OutPutMessageProc(fif: Integer; fmt: PChar); stdcall;
  external FIDLL name 'FreeImage_OutputMessageProc';

type
  FreeImage_OutputMessageFunction = function(fif: FREE_IMAGE_FORMAT; msg: PChar): pointer; stdcall;

procedure FreeImage_SetOutputMessage(omf: FreeImage_OutputMessageFunction); stdcall;
  external FIDLL name '_FreeImage_SetOutputMessage@8';

// Allocate/Unload routines ------------------------------------------------

function FreeImage_Allocate(width, height, bpp: integer; red_mask: Cardinal = 0;
  green_mask: Cardinal = 0; blue_mask: Cardinal = 0): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_Allocate@24';

function FreeImage_Clone(dib: PFIBITMAP): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_Clone@4';

procedure FreeImage_Unload(dib: PFIBITMAP); stdcall;
  external FIDLL name '_FreeImage_Unload@4';

// Load / Save routines -----------------------------------------------------

function FreeImage_Load(fif: FREE_IMAGE_FORMAT; filename: PChar;
  flags: integer = 0): PFIBITMAP; stdcall; external FIDLL name '_FreeImage_Load@12';

function FreeImage_LoadFromHandle(fif: FREE_IMAGE_FORMAT; io: PFreeImageIO;
  handle: fi_handle; flags: integer = 0): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_LoadFromHandle@16';

function FreeImage_Save(fif: FREE_IMAGE_FORMAT; dib: PFIBITMAP; filename: PChar;
  flags: integer = 0): boolean; stdcall;
  external FIDLL name '_FreeImage_Save@16';

function FreeImage_SaveToHandle(fif: FREE_IMAGE_FORMAT; dib: PFIBITMAP;
  io : PFreeImageIO; handle : fi_handle; flags : integer = 0) : boolean; stdcall;
  external FIDLL name '_FreeImage_SaveToHandle@20';

// Memory I/O stream routines ----------------------------------------------

function FreeImage_OpenMemory(data: PByte = nil;
  size_in_bytes: DWORD = 0): PFIMEMORY; stdcall;
  external FIDLL name '_FreeImage_OpenMemory@8';

procedure FreeImage_CloseMemory(stream: PFIMEMORY); stdcall;
  external FIDLL name '_FreeImage_CloseMemory@4';

function FreeImage_LoadFromMemory(fif: FREE_IMAGE_FORMAT; stream: PFIMEMORY;
  flags: Integer = 0): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_LoadFromMemory@8';

function FreeImage_SaveToMemory(fif: FREE_IMAGE_FORMAT; dib: PFIBITMAP;
  stream: PFIMEMORY; flags: Integer = 0): Boolean; stdcall;
  external FIDLL name '_FreeImage_SaveToMemory@16';

function FreeImage_TellMemory(stream: PFIMEMORY): Longint; stdcall;
  external FIDLL name '_FreeImage_TellMemory@4';

function FreeImage_SeekMemory(stream: PFIMEMORY; offset: Longint;
  origin: Integer): Boolean; stdcall;
  external FIDLL name '_FreeImage_SeekMemory@12';

function FreeImage_AcquireMemory(stream: PFIMEMORY; var data: PByte;
  var size_in_bytes: DWORD): Boolean; stdcall;
  external FIDLL name '_FreeImage_AcquireMemory@12';

// Plugin Interface --------------------------------------------------------

function FreeImage_RegisterLocalPlugin(proc_address : FI_InitProc; format,
  description, extension, regexpr : PChar) : FREE_IMAGE_FORMAT; stdcall;
  external FIDLL name '_FreeImage_RegisterLocalPlugin@20';
  
function FreeImage_RegisterExternalPlugin(path, format, description, extension, regexpr : PChar): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL name '_FreeImage_RegisterExternalPlugin@20';
  
function FreeImage_GetFIFCount: integer; stdcall;
  external FIDLL name '_FreeImage_GetFIFCount@0';
  
procedure FreeImage_SetPluginEnabled(fif: FREE_IMAGE_FORMAT; enable: boolean); stdcall;
  external FIDLL Name '_FreeImage_SetPluginEnabled@8';
  
function FreeImage_IsPluginEnabled(fif: FREE_IMAGE_FORMAT): integer; stdcall;
  external FIDLL Name '_FreeImage_IsPluginEnabled@4';

function FreeImage_GetFIFFromFormat(format: PChar): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL Name '_FreeImage_GetFIFFromFormat@4';

function FreeImage_GetFIFFromMime(format: PChar): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL Name '_FreeImage_GetFIFFromMime@4';
  
function FreeImage_GetFormatFromFIF(fif: FREE_IMAGE_FORMAT): PChar; stdcall;
  external FIDLL Name '_FreeImage_GetFormatFromFIF@4';
  
function FreeImage_GetFIFExtensionList(fif: FREE_IMAGE_FORMAT): PChar; stdcall;
  external FIDLL Name '_FreeImage_GetFIFExtensionList@4';
  
function FreeImage_GetFIFDescription(fif: FREE_IMAGE_FORMAT): PChar; stdcall;
  external FIDLL Name '_FreeImage_GetFIFDescription@4';
  
function FreeImage_GetFIFRegExpr(fif: FREE_IMAGE_FORMAT): PChar; stdcall;
  external FIDLL Name '_FreeImage_GetFIFRegExpr@4';
  
function FreeImage_GetFIFFromFilename(fname: PChar): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL Name '_FreeImage_GetFIFFromFilename@4';

function FreeImage_FIFSupportsReading(fif: FREE_IMAGE_FORMAT): boolean; stdcall;
  external FIDLL Name '_FreeImage_FIFSupportsReading@4';
  
function FreeImage_FIFSupportsWriting(fif: FREE_IMAGE_FORMAT): boolean; stdcall;
  external FIDLL Name '_FreeImage_FIFSupportsWriting@4';
  
function FreeImage_FIFSupportsExportBPP(fif: FREE_IMAGE_FORMAT;
  bpp: integer): boolean; stdcall;
  external FIDLL Name '_FreeImage_FIFSupportsExportBPP@8';

function FreeImage_FIFSupportsICCProfiles(fif: FREE_IMAGE_FORMAT): boolean; stdcall;
  external FIDLL Name '_FreeImage_FIFSupportsICCProfiles@4';

function FreeImage_FIFSupportsExportType(fif: FREE_IMAGE_FORMAT;
  image_type: FREE_IMAGE_TYPE): Boolean; stdcall;
  external FIDLL name '_FreeImage_FIFSupportsExportType@12';

// Multipaging interface ----------------------------------------------------

function FreeImage_OpenMultiBitmap(fif: FREE_IMAGE_FORMAT; filename: PChar;
  create_new, read_only, keep_cache_in_memory: boolean): PFIMULTIBITMAP; stdcall;
  external FIDLL Name '_FreeImage_OpenMultiBitmap@20';

function FreeImage_CloseMultiBitmap(bitmap: PFIMULTIBITMAP;
  flags: integer = 0): boolean; stdcall;
  external FIDLL Name '_FreeImage_CloseMultiBitmap@8';

function FreeImage_GetPageCount(bitmap: PFIMULTIBITMAP): integer; stdcall;
  external FIDLL Name '_FreeImage_GetPageCount@4';

procedure FreeImage_AppendPage(bitmap: PFIMULTIBITMAP; data: PFIBITMAP); stdcall;
  external FIDLL Name '_FreeImage_AppendPage@8';

procedure FreeImage_InsertPage(bitmap: PFIMULTIBITMAP; page: integer; data: PFIBITMAP); stdcall;
  external FIDLL Name '_FreeImage_InsertPage@12';

procedure FreeImage_DeletePage(bitmap: PFIMULTIBITMAP; page: integer); stdcall;
  external FIDLL Name '_FreeImage_DeletePage@8';

function FreeImage_LockPage(bitmap: PFIMULTIBITMAP; page: integer): PFIBITMAP; stdcall;
  external FIDLL Name '_FreeImage_LockPage@8';

procedure FreeImage_UnlockPage(bitmap: PFIMULTIBITMAP; page: PFIBITMAP; changed: boolean); stdcall;
  external FIDLL Name '_FreeImage_UnlockPage@12';

function FreeImage_MovePage(bitmap: PFIMULTIBITMAP; target, source: integer): Boolean; stdcall;
  external FIDLL Name '_FreeImage_MovePage@12';

function FreeImage_GetLockedPageNumbers(bitmap: PFIMULTIBITMAP;
  var pages: integer; var count : integer): Boolean; stdcall;
  external FIDLL Name '_FreeImage_GetLockedPageNumbers@12';

// Filetype request routines -----------------------------------------------

function FreeImage_GetFileType(filename: PChar; size: integer): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL name '_FreeImage_GetFileType@8';

function FreeImage_GetFileTypeFromHandle(io: PFreeImageIO; handle: fi_handle;
  size: integer): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL name '_FreeImage_GetFileTypeFromHandle@12';

function FreeImage_GetFileTypeFromMemory(stream: PFIMEMORY;
  size: Integer = 0): FREE_IMAGE_FORMAT; stdcall;
  external FIDLL name '_FreeImage_GetFileTypeFromMemory@8'; 

// ImageType request routine ------------------------------------------------

function FreeImage_GetImageType(dib: PFIBITMAP): FREE_IMAGE_TYPE; stdcall;
  external FIDLL name '_FreeImage_GetImageType@8';

// FreeImage info routines -------------------------------------------------

function FreeImage_GetRedMask(dib: PFIBITMAP): cardinal; stdcall;
  external FIDLL name '_FreeImage_GetRedMask@4';

function FreeImage_GetGreenMask(dib: PFIBITMAP): cardinal; stdcall;
  external FIDLL name '_FreeImage_GetGreenMask@4';

function FreeImage_GetBlueMask(dib: PFIBITMAP): cardinal; stdcall;
  external FIDLL name '_FreeImage_GetBlueMask@4';

function FreeImage_GetTransparencyCount(dib: PFIBITMAP): cardinal; stdcall;
  external FIDLL name '_FreeImage_GetTransparencyCount@4';
  
function FreeImage_GetTransparencyTable(dib: PFIBITMAP): PByte; stdcall;
  external FIDLL name '_FreeImage_GetTransparencyTable@4';

procedure FreeImage_SetTransparent(dib: PFIBITMAP; enabled: boolean); stdcall;
  external FIDLL name '_FreeImage_SetTransparent@8';

procedure FreeImage_SetTransparencyTable(dib: PFIBITMAP; table: PByte; count: integer); stdcall;
  external FIDLL name '_FreeImage_SetTransparencyTable@12';

function FreeImage_IsTransparent(dib: PFIBITMAP): boolean; stdcall;
  external FIDLL name '_FreeImage_IsTransparent@4';

function FreeImage_HasBackgroundColor(dib: PFIBITMAP): Boolean; stdcall;
  external FIDLL name '_FreeImage_HasBackgroundColor@4';

function FreeImage_GetBackgroundColor(dib: PFIBITMAP; var bkcolor: PRGBQUAD): Boolean; stdcall;
  external FIDLL name '_FreeImage_GetBackgroundColor@12';

function FreeImage_SetBackgroundColor(dib: PFIBITMAP; bkcolor: PRGBQUAD): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetBackgroundColor@12';


// DIB info routines -------------------------------------------------------

function FreeImage_GetColorsUsed(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetColorsUsed@4';

function FreeImage_GetBits(dib: PFIBITMAP): PByte; stdcall;
  external FIDLL name '_FreeImage_GetBits@4';
